<resources>
    <string name="app_name">Top news articles worldwide</string>


    <string name="articleUrlKey">articleUrl</string>
    <string name="urlsListKey">urlsList</string>
    <string name="tutorialMessage">Swipe left to see more articles..</string>
    <string name="baseball_image">Baseball</string>
    <string name="basketball_image">Basketball</string>
    <string name="tennis_image">Tennis</string>
    <string name="boxing_image">Boxing</string>
    <string name="swimming_image">Swimming</string>
    <string name="soccer_image">Soccer</string>
    <string name="football_image">Football</string>
    <string name="judo_image">Judo</string>

</resources>
