<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baseballFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/baseballButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/baseball_img"
            android:contentDescription="@string/baseball_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/baseball_image"
            android:paddingLeft="10dp"
            android:background="@drawable/my_gradient"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basketballFrame"
        android:layout_toRightOf="@id/baseballFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/basketballButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/basketball_img"
            android:contentDescription="@string/basketball_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/basketball_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tennisFrame"
        android:layout_below="@id/basketballFrame"
        android:background="@drawable/my_gradient"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/boxingFrame"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

    <ImageButton
        android:id="@+id/tennisButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="197dp"
        android:maxHeight="197dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:onClick="sendNewsCategory"
        app:srcCompat="@drawable/tennis_img"
        android:contentDescription="@string/tennis_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/tennis_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boxingFrame"
        android:layout_below="@id/baseballFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/boxingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/boxing_img"
            android:contentDescription="@string/boxing_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/boxing_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swimmingFrame"
        android:layout_below="@id/boxingFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/swimmingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/swimming_img"
            android:contentDescription="@string/swimming_image" />
        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/swimming_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soccerFrame"
        android:layout_below="@id/tennisFrame"
        android:layout_toRightOf="@id/swimmingFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/soccerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/soccer_img"
            android:contentDescription="@string/soccer_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/soccer_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/footballFrame"
        android:layout_below="@id/soccerFrame"
        android:layout_toRightOf="@id/judoFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/footballButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/football_img"
            android:contentDescription="@string/football_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/football_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/judoFrame"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/swimmingFrame"
        android:maxWidth="197dp"
        android:maxHeight="197dp">

        <ImageButton
            android:id="@+id/judoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxWidth="197dp"
            android:maxHeight="197dp"
            android:scaleType="fitCenter"
            android:onClick="sendNewsCategory"
            app:srcCompat="@drawable/judo_img"
            android:contentDescription="@string/judo_image" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="149dp"
            android:text="@string/judo_image"
            android:background="@drawable/my_gradient"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </FrameLayout>


</RelativeLayout>